# hse-big-data-analytics-coursework

./: .pages  .pre-commit-config.yaml  README.md  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: index.md  math_for_data_analysis.md  reference.md
docs/javascripts/: mathjax.js
notebooks/: mkdocs.yml
notebooks/math-for-data-analysis/: hse_bda_2025_lab_2.ipynb
