[project]
name = "hse-big-data-analytics-coursework"
version = "0.0.1"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "numpy>=2.3.4",
    "scikit-image>=0.25.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-jupyter>=0.25.1",
    "pytest>=8.4.1",
    "ruff>=0.14.1",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

pythonpath = ["."]
